Add custom carousel image/text in index page

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,23 +3,27 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     {% block styles %}
     {% endblock %}
   </head>
   <body>
     <header>
 
-      <div class="navbar navbar-inverse navbar-fixed-top justify-content-center" role="navigation">
+      <div class="navbar justify-content-center" role="navigation">
 
           <div class="btn-group">
              <a class="navbar-brand" href="#">Home</a></li>
              <a class="navbar-brand" href="#">Contacts</a></li>
              <a class="navbar-brand" href="#">Create account</a></li>
-            </div>  {# dropdown div end #}
+                <a class="navbar-brand" href="#">Home</a></li>
+                <a class="navbar-brand" href="#">Contacts</a></li>
+                <a class="navbar-brand" href="#">Create account</a></li>
+            </div>  {# btn div end #}
 
          </div>
 </header>
