--- a/templates/index.html
+++ b/templates/index.html
@@ -4,44 +4,43 @@
 
 {% block content %}
 
-  <div class="bd-example">
+<link rel="stylesheet" href="{% static '/css/carousel.css' %}">
 
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="{% static 'wallpapers/3.jpg' %}?auto=yes" alt="First slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h3>First slide label</h3>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="{% static 'wallpapers/2.jpg' %}?auto=yes" alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h3>Second slide label</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#quote_carousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#quote_carousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
+<div id="quote_carousel" class="carousel slider" data-ride="carousel">
+    <div class="carousel-inner" role="listbox">
+
+      {% for quote, image_no in carousel_data %}
+        {% if forloop.first %}
+          <div class="carousel-item active">
+        {% else %}
+          <div class="carousel-item">
+        {% endif %}
+            <img class="d-block w-100 h-35" src='{% static "wallpapers/" %}{{ image_no }}.jpg'>
+            <div class="carousel-caption">
+                <h3 class="carousel-text">{{ quote.quote_text }}</h3>
+                <p class="carousel-text carousel-text-author">{{ quote.author }}</p>
+            </div> {# end of div carousel-caption #}
+        </div> {# end of class item active #}
+      {% endfor %}
+
+    </div> {# end of class carousel-inner#}
+</div> {# end of class carousel#}
+
+
+
+
+
+
 
 
 <div class="container">
-    {% if categories %}
+    {% if quotes %}
       <div class="card-columns">
-      {% for category in categories %}
+      {% for quote in quotes %}
       <div class="card">
         <div class="card-body">
-          <h4 class="card-title">{{ category.quote_text }}</h4>
-          <p class="card-text" style="text-align:right">{{ category.author | title }}</p>
+          <h4 class="card-title">{{ quote.quote_text }}</h4>
+          <p class="card-text" style="text-align:right">{{ quote.author | title }}</p>
         </div>
       </div>
       {% endfor %}
