--- a/templates/index.html
+++ b/templates/index.html
@@ -26,22 +26,17 @@
     </div> {# end of class carousel-inner#}
 </div> {# end of class carousel#}
 
-
-
-
-
-
-
-
 <div class="container">
-    {% if quotes %}
+    {% if categories %}
       <div class="card-columns">
-      {% for quote in quotes %}
+      {% for category in categories %}
       <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">{{ quote.quote_text }}</h4>
-          <p class="card-text" style="text-align:right">{{ quote.author | title }}</p>
+        <a href="category/{{category.category}}">
+        <img class="card-img" src="{% static "wallpapers/2.jpg" %}" alt="Card image">
+        <div class="card-img-overlay">
+          <p class="card-text card-text-custom">{{ category.category }}</p>
         </div>
+      </a>
       </div>
       {% endfor %}
       </div>
