--- a/templates/base.html
+++ b/templates/base.html
@@ -8,25 +8,45 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     {% block styles %}
     {% endblock %}
   </head>
-  <body>
     <header>
+         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Logo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-      <div class="navbar justify-content-center" role="navigation">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/categories">Categories</a>
+              </li>
 
-          <div class="btn-group">
-             <a class="navbar-brand" href="#">Home</a></li>
-             <a class="navbar-brand" href="#">Contacts</a></li>
-             <a class="navbar-brand" href="#">Create account</a></li>
-                <a class="navbar-brand" href="#">Home</a></li>
-                <a class="navbar-brand" href="#">Contacts</a></li>
-                <a class="navbar-brand" href="#">Create account</a></li>
-            </div>  {# btn div end #}
+              <li class="nav-item">
+                <a class="nav-link" href="/authors">Authors</a>
+              </li>
 
+              <li class="nav-item">
+                <a class="nav-link" href="/sign_in">Sign in</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/sign_up">Sign up</a>
+              </li>
+           </ul>
+           <form class="form-inline my-2 my-lg-0">
+             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+           </form>
          </div>
+        </nav>
 </header>
+  <body>
       {% block content %}
       {% endblock content %}
   </body>
