--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
       <div class="card-columns">
       {% for category in categories %}
       <div class="card">
-        <a href="category/{{category.category}}">
+        <a href="categories/{{category.category}}">
         <img class="card-img" src="{% static "wallpapers/2.jpg" %}" alt="Card image">
         <div class="card-img-overlay">
           <p class="card-text card-text-custom">{{ category.category }}</p>
