--- a/static/css/card.css
+++ b/static/css/card.css
@@ -9,14 +9,14 @@
 }
 
 .card-text{
-  font-size: 2.5vb;
+  font-size: 1.3vw;
   color:white;
   font-weight:900;
   font-family: 'Roboto Slab', serif;
 }
 
 .card-text-author {
-  font-size: 1vw !important;
+  font-size: 1.3vw !important;
 }
 
 .category-title{
