Update in card and base css files, add author image placeholder, modified authors_details and authors_list.html

--- a/static/css/card.css
+++ b/static/css/card.css
@@ -39,3 +39,9 @@ position: relative;
 top: 50%;
 transform: translateY(-50%);
 }
+
+.card-text-black-custom{
+  font-size: 1vw;
+  color:black;
+  font-weight: 500
+}
