--- a/templates/authors_list.html
+++ b/templates/authors_list.html
@@ -20,7 +20,7 @@
             </button>
           </h5>
         </div>
-        <div id="collapse{{letter}}" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
           <div class="card-deck">
             {% for author in authors %}
               <div class="card-body custom-card" style="text-align:center;"><a href="/authors/{{ author.1 }}/">{{ author.0 }}</a></div>
