--- a/static/css/author_details.css
+++ b/static/css/author_details.css
@@ -14,6 +14,7 @@ img{
   font-weight: 800;
 }
 
+/* GRADIENTS FOR AUTHOR QUOTES ROWS */
 .custom-card:nth-child(even){
   color:white;
   background: rgb(30,87,153); /* Old browsers */
@@ -23,8 +24,6 @@ img{
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
 }
 
-
-
 .custom-card:nth-child(odd){
   color:white;
   background: rgb(179,220,237); /* Old browsers */
@@ -32,4 +31,13 @@ img{
   background: -webkit-linear-gradient(top, rgba(179,220,237,1) 0%,rgba(41,184,229,1) 50%,rgba(188,224,238,1) 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom, rgba(179,220,237,1) 0%,rgba(41,184,229,1) 50%,rgba(188,224,238,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3dced', endColorstr='#bce0ee',GradientType=0 ); /* IE6-9 */
+}
+
+.load-wrapper{
+  text-align: center;
+}
+
+#load-more{
+  width: 50%;
+  border: 1px solid black
 }
