--- a/templates/author_details.html
+++ b/templates/author_details.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-
+<script src="{% static 'js/endless_scroll.js' %}"></script>
 <link rel="stylesheet" href="{% static '/css/card.css' %}">
 <link rel="stylesheet" href="{% static '/css/author_details.css' %}">
 {% for author in author %}
@@ -19,10 +19,11 @@
   </div>
   <button class="btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
       <div class="inner-button">
-        Read quotes from {{ author | title }}
+        Show quotes from {{ author | title }}
       </div>
 </button>
 </div>
+
 <div class="container">
 <div id="accordion">
   <div class="card-custom">
@@ -33,7 +34,10 @@
           <div class="card-body">{{quote}}</div>
       </div>
       {% endfor %}
-    </div>
+      <div class="load-wrapper">
+          <div id="load-more">Give me more</div>
+      </div>
+  </div>
   </div>
 </div>
 {% endfor %}
