--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   </head>
     <header>
          <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="{% url 'index' %}">Logo</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
